--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,8 +6,8 @@
     --accent1-color: #FFB4A2;
     --accent2-color: #B5838D;
 
-    --heading-font: 'Merriweather', serif;
-    --paragraph-font: 'Source Sans Pro', sans-serif;
+    --heading-font: 'Merriweather', Arial, serif;
+    --paragraph-font: 'Source Sans Pro', Arial, sans-serif;
 
     --nav-background-color: #FFB4A2;
     --nav-link-color: #6D6875;
