--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -108,6 +108,6 @@ nav a:hover {
     background-color: rgb(181, 131, 141, .7);
 }
 
-.sociallinks {
+.sociallinks a {
     text-decoration: none;
 }
