--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,17 +7,30 @@
 nav {
     background-color: steelblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 nav a {
-    color: white;
     display: block;
     padding: 20px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: white;
+}
+
+main {
+    grid-column: 2/3;
+    margin: 1rem;
 }
 
 h1 {
     color: steelblue;
-    margin: 1rem;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid steelblue;
 }
 
 main img {
@@ -35,14 +48,16 @@ p {
     padding: 0;
 }
 
-main {
+header, .grid, footer {
     max-width: 840px;
+    margin: 0 auto
 }
 
 aside {
-    width: 30em;
-    text-align: center;
+    width: 15em;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -53,7 +68,9 @@ aside img {
 aside h2 {
     position: absolute;
     top: 20px;
-    right: 190px;
+    text-align: center;
+    right: 0;
+    left: 0;
 }
 
 footer {
@@ -73,4 +90,9 @@ footer {
 
 .intend {
     padding-left: 2rem;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
