--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -27,9 +27,10 @@ body {
     padding: 20px; */
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, figcaption {
     font-family: var(--heading-font);
     color: var(--primary-color);
+    text-align: center;
 }
 
 header {
@@ -82,12 +83,21 @@ nav a:hover {
 section {
     display: block;
     border-bottom: 3px solid steelblue;
-    padding: 1.5rem;
+    padding: 1.2rem;
 }
+
+/* section h2 {
+    text-align: center;
+} */
 
 section p {
     font-size: 1.2rem;
     line-height: 2rem;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 70% 30%;
 }
 
 /* Class selectors */
@@ -108,7 +118,7 @@ section p {
 
 .hero article img {
     float: right;
-    width: 27%;
+    width: 30%;
     height: auto;
     padding: .5rem;
 }
@@ -119,23 +129,53 @@ section p {
     left: 0;
     padding: 1rem;
     margin: auto;
-    text-align: center;
+    /* text-align: center; */
     color: aliceblue;
     background-color: rgb(255, 180, 162, .7);
 }
 
 .hero article {
-    top: 40%;
+    top: 39%;
     right: 0;
     left: 0;
     max-width: 85%;
     padding: 1rem;
     margin: auto;
     text-align: left;
+    font-size: 1.2rem;
     color: white;
     background-color: rgb(181, 131, 141, .7);
 }
 
+.five_pictures {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    background-color: var(--accent1-color);
+}
+
+.five_pictures h2 {
+    grid-column: 1/4;
+    padding-bottom: 1rem;
+}
+
+.five_pictures figure {
+    padding: 1rem;
+}
+
+.five_pictures img {
+    width: 100%;
+    padding: 0.5rem;
+}
+
+.five_pictures figcaption {
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 700;
+    padding-bottom: 0.5rem;
+}
+
 .sociallinks a {
     text-decoration: none;
+    background-color: white;
 }
