--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
 }
 
 nav {
-    background-color: steelblue;
+    background-color: darkblue;
     padding: 10px;
     display: flex;
     justify-content: space-evenly;
