--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -130,8 +130,8 @@ footer {
     padding: 1rem;
     margin: auto;
     /* text-align: center; */
-    color: aliceblue;
-    background-color: rgb(181, 131, 141, .7);
+    color: black;
+    background-color: rgb(255, 180, 162, .7);
 }
 
 .hero article {
@@ -143,7 +143,7 @@ footer {
     margin: auto;
     text-align: left;
     font-size: 1.2rem;
-    color: white;
+    color: black;
     background-color: rgb(181, 131, 141, .7);
 }
 
