--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -62,7 +62,7 @@ input, select, textarea {
   font-size: 1.1rem;
 }
 
-input[type='checkbox'] {
+input[type="checkbox"] {
   width: 22px;
   height: 22px;
   vertical-align: bottom;
@@ -86,7 +86,7 @@ footer {
   width: 650px;
   text-align: center;
   font-size: 0.8em;
-  color: #777;
+  color: black;
   border-top: 1px solid #ccc;
 }
 
@@ -101,6 +101,7 @@ footer {
   margin: 0.5rem 0;
 }
 
-column2 {
+.column2 {
   grid-template-columns: 1fr 2fr;
+  margin: 0.5rem 0;
 }
